--- a/main.html
+++ b/main.html
@@ -2,6 +2,32 @@
 <html lang="en">
 
 <head>
+  <style>
+    body{ 
+    background-color: #f7f7f7;
+
+
+}
+@media screen and (min-width: 700px) {
+    nav{ 
+    margin: 0px 120px 0px 120px;
+
+    }
+}
+
+nav{
+    height: 64px; 
+    background-color:#0c2525; 
+    display: flex; 
+    justify-content: center; 
+    border-radius: 3px;
+}
+.box{
+    
+    color:#0c2525;
+     font-size: 25px;
+    }
+  </style>
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,7 +36,7 @@
    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-  <link rel="stylesheet" href="style.css">
+ 
   <link rel="icon" href="newspaper.svg" type="image/icon type">
   <title>indenews</title>
 </head>
